Added loading animation on page load

--- a/AutoHub.Client/wwwroot/css/app.css
+++ b/AutoHub.Client/wwwroot/css/app.css
@@ -163,4 +163,62 @@ main {
   float: right;
 }
 
+#app .loader-wrap {
+  display: grid;
+  place-content: center;
+  margin: 0;
+  min-height: 100vh;
+  background: #000000;
+}
+#app .loader-wrap:before {
+  grid-column: 1;
+  grid-row: 1;
+  transform: scale(0.8);
+  background: linear-gradient(90deg, #fde6bd, #a1c5ab, #f4dd51, #d11e48, #632f53);
+  content: "";
+}
+#app .loader {
+  grid-column: 1;
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+  padding: 6em;
+  background: inherit;
+  filter: blur(9px) contrast(18);
+  mix-blend-mode: multiply;
+}
+#app .particle {
+  width: 0;
+  padding: 1.5em;
+  border-radius: 50%;
+  background: #fff;
+}
+#app .particle:first-child, #app .particle:last-child {
+  padding: 0.75em;
+}
+#app .particle:nth-child(odd) {
+  animation: pulse var(--t) ease-in-out var(--dt) infinite;
+}
+#app .particle:nth-child(2n) {
+  transform: rotate(0deg) translate(3em);
+  animation: spin var(--t) linear infinite;
+}
+#app .particle:nth-child(4n) {
+  animation-direction: reverse;
+  animation-duration: calc(1.2*var(--t));
+}
+@keyframes pulse {
+  50% {
+    transform: scale(1.8);
+  }
+  70% {
+    transform: scale(0.6);
+  }
+}
+@keyframes spin {
+  to {
+    transform: rotate(1turn) translate(3em);
+  }
+}
+
 /*# sourceMappingURL=app.css.map */
