--- a/AutoHub.Client/wwwroot/css/app.scss
+++ b/AutoHub.Client/wwwroot/css/app.scss
@@ -15,4 +15,5 @@
 @import "app/Components/mainLayout";
 @import "app/Components/footer";
 @import "app/Components/jumbotron";
+@import "app/Components/loader";
 
