--- a/AutoHub.Client/wwwroot/css/app.css
+++ b/AutoHub.Client/wwwroot/css/app.css
@@ -16,6 +16,123 @@
   --radius-8: 8px;
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fade-in {
+  /* Firefox */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fade-in {
+  /* Safari and Chrome */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-o-keyframes fade-in {
+  /* Opera */
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-out {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@-moz-keyframes fade-out {
+  /* Firefox */
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes fade-out {
+  /* Safari and Chrome */
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@-o-keyframes fade-out {
+  /* Opera */
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes fade-in-out {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-moz-keyframes fade-in-out {
+  /* Firefox */
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes fade-in-out {
+  /* Safari and Chrome */
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-o-keyframes fade-in-out {
+  /* Opera */
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 body {
   background-image: url("../../images/bg-blob.svg");
   background-position: center top;
@@ -109,6 +226,13 @@ p {
   height: auto;
   align-items: center;
   padding: 0;
+  animation: fade-in 2s;
+  -moz-animation: fade-in 2s;
+  /* Firefox */
+  -webkit-animation: fade-in 2s;
+  /* Safari and Chrome */
+  -o-animation: fade-in 2s;
+  /* Opera */
 }
 .header .nav {
   height: auto;
@@ -163,61 +287,86 @@ main {
   float: right;
 }
 
-#app .loader-wrap {
-  display: grid;
-  place-content: center;
-  margin: 0;
-  min-height: 100vh;
-  background: #000000;
+#app {
+  animation: fadein 1s ease-in-out;
+  -moz-animation: fade-in-out 1s ease-in-out;
+  /* Firefox */
+  -webkit-animation: fade-in-out 1s ease-in-out;
+  /* Safari and Chrome */
+  -o-animation: fade-in-out 1s ease-in-out;
+  /* Opera */
 }
-#app .loader-wrap:before {
-  grid-column: 1;
-  grid-row: 1;
-  transform: scale(0.8);
-  background: linear-gradient(90deg, #fde6bd, #a1c5ab, #f4dd51, #d11e48, #632f53);
-  content: "";
+#app body {
+  overflow: hidden;
 }
-#app .loader {
-  grid-column: 1;
-  grid-row: 1;
+#app .container {
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding: 6em;
-  background: inherit;
-  filter: blur(9px) contrast(18);
-  mix-blend-mode: multiply;
+  height: 100vh;
+  overflow: hidden;
 }
-#app .particle {
-  width: 0;
-  padding: 1.5em;
+#app .circle {
+  width: 1.25rem;
+  height: 1.25rem;
   border-radius: 50%;
-  background: #fff;
+  margin: 1.0625rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#app .particle:first-child, #app .particle:last-child {
-  padding: 0.75em;
+#app .circle:before {
+  content: "";
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 50%;
+  opacity: 0.7;
+  animation: scale 2s infinite cubic-bezier(0, 0, 0.49, 1.02);
 }
-#app .particle:nth-child(odd) {
-  animation: pulse var(--t) ease-in-out var(--dt) infinite;
+#app .circle-1 {
+  background-color: #2d284e;
 }
-#app .particle:nth-child(2n) {
-  transform: rotate(0deg) translate(3em);
-  animation: spin var(--t) linear infinite;
+#app .circle-1:before {
+  background-color: #2d284e;
+  animation-delay: 200ms;
 }
-#app .particle:nth-child(4n) {
-  animation-direction: reverse;
-  animation-duration: calc(1.2*var(--t));
+#app .circle-2 {
+  background-color: #363160;
 }
-@keyframes pulse {
-  50% {
-    transform: scale(1.8);
+#app .circle-2:before {
+  background-color: #363160;
+  animation-delay: 400ms;
+}
+#app .circle-3 {
+  background-color: #413a72;
+}
+#app .circle-3:before {
+  background-color: #413a72;
+  animation-delay: 600ms;
+}
+#app .circle-4 {
+  background-color: #4d4585;
+}
+#app .circle-4:before {
+  background-color: #4d4585;
+  animation-delay: 800ms;
+}
+#app .circle-5 {
+  background-color: #4c4486;
+}
+#app .circle-5:before {
+  background-color: #4c4486;
+  animation-delay: 1000ms;
+}
+@keyframes scale {
+  0% {
+    transform: scale(1);
   }
-  70% {
-    transform: scale(0.6);
+  50%, 75% {
+    transform: scale(2.5);
   }
-}
-@keyframes spin {
-  to {
-    transform: rotate(1turn) translate(3em);
+  78%, 100% {
+    opacity: 0;
   }
 }
 
