--- a/AutoHub.Client/Shared/Header.razor
+++ b/AutoHub.Client/Shared/Header.razor
@@ -1,13 +1,23 @@
 <header class="header glass-blur">
     <ul class="nav">
+        @*<NavLink class="nav__item" href="">
+            Home
+        </NavLink>
+        <NavLink class="nav__item" href="Auctions">
+            Auctions
+        </NavLink>
+        <NavLink class="nav__item" href="SellCar">
+            Sell your Car
+        </NavLink>*@
+        
         <li class="nav__item">
-            <a href="">Home</a>
+            <a href="/">Home</a>
         </li>
         <li class="nav__item">
-            <a href="">Auctions</a>
+            <a href="/Auctions">Auctions</a>
         </li>
         <li class="nav__item">
-            <a href="">Sell your car</a>
+            <a href="/SellCar">Sell your car</a>
         </li>
     </ul>
 </header>
