--- a/AutoHub.Client/wwwroot/css/app.css
+++ b/AutoHub.Client/wwwroot/css/app.css
@@ -164,7 +164,12 @@ body {
   font-weight: 300;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--color-dark-heading);
   font-family: var(--font-family);
   font-weight: 600;
@@ -319,7 +324,7 @@ main {
   justify-content: center;
   align-items: center;
 }
-#app .circle:before {
+#app .circle::before {
   content: "";
   width: 1.25rem;
   height: 1.25rem;
