--- a/AutoHub.Client/wwwroot/css/app/Components/_loader.scss
+++ b/AutoHub.Client/wwwroot/css/app/Components/_loader.scss
@@ -30,7 +30,7 @@
     justify-content: center;
     align-items: center;
 
-    &:before {
+    &::before {
       content: "";
       width: $circle-size;
       height: $circle-size;
