--- a/AutoHub.Client/wwwroot/css/app/_typography.scss
+++ b/AutoHub.Client/wwwroot/css/app/_typography.scss
@@ -1,20 +1,27 @@
-body{
+body {
   color: var(--color-paragraph);
   font-family: var(--font-family);
   font-size: var(--font-base-size);
   line-height: 1.65;
   font-weight: 300;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--color-dark-heading);
   font-family: var(--font-family);
   font-weight: 600;
   line-height: 1.3;
 }
+
 h2 {
   font-size: rem(24px);
   margin-bottom: rem(20px);
-
+  
   @media only screen and (max-width: $small) {
     font-size: rem(18px);
   }
@@ -54,7 +61,6 @@ h6 {
     font-size: rem(10px);
   }
 }
-
 
 p {
   font-size: 16px;
